 - Fixed full screen window detection with Win-D key
 - Fixed display issues with 'You were added' dialog
 - HTTP proxy processing improvements
 - AIM: Fixed possible crash in file transfer
 - ICQ: Translation fixes
 - ICQ: Fixed crash during avatar retrieval
 - ICQ: Improved client detection
 - ICQ: Fixed issues with setting away message
 - ICQ: Fixed deadlocks
 - IRC: Fixed disconnect issues
 - Jabber: Fixed rare crash
 - MSN: Fixed possible crash on disconnect


* New in 0.9.2
Bugfixes:
 - Fixed database upgrade logic
 - IRC: Fixed possible crash
 - Jabber: Can't send messages on non-English language


* New in 0.9.1
Enhancements:
 - Improved profile upgrade path logic

Bugfixes:
 - Fixed plugin file names
 - AIM: Fixed possible crash
 - IRC: Fixed crash on nick change


* New in 0.9.0
Enhancements:
 - New improved protocols engine with full Unicode support
 - New high quality icon theme
 - Dynamic protocol's menu creation
 - New Unicode-aware profile manager
 - Added the first official 64-bit core version
 - Added 32x32 pixels icons support
 - Added Windows 7 taskbar icon support
 - Added full Unicode file transfers
 - Added the Unicode search capability
 - Added the Unicode status messages processing
 - Added menu option to move all protocol menus to the status bar
 - Added SSL certificate validation
 - Added ability to transfer files longer than 4 GB
 - Added support for HTTP 1.1 persistent connections including persistent HTTP proxy connections
 - Added support for HTTP SPINEGO (Negotiate) authentication
 - Added support for Internet Explorer proxy settings usage including proxy auto configuration scripts
 - Added transparent HTTP proxy/server authentication if possible (no user settings needed)
 - Jabber: Added GSSAPI authentication
 - Jabber: Added API for the second-level Jabber subplugins
 - Jabber: Added ability to transfer files longer than 4 GB
 - Gadu-Gadu: Brought back and improved SSL support (still requires OpenSSL)