@@ -27,9 +27,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #define MIRANDA_MAKE_VERSION(a,b,c,d)   (((((DWORD)(a))&0xFF)<<24)|((((DWORD)(b))&0xFF)<<16)|((((DWORD)(c))&0xFF)<<8)|(((DWORD)(d))&0xFF))
 #endif
 
-#define MIRANDA_VERSION_FILEVERSION  0,9,3,2                               
-#define MIRANDA_VERSION_STRING      "0.9.3.2"                              
-#define MIRANDA_VERSION_DISPLAY     "0.9.3 beta #2"                  
-#define MIRANDA_VERSION_DWORD       MIRANDA_MAKE_VERSION(0, 9, 3, 2)       
+#define MIRANDA_VERSION_FILEVERSION  0,9,3,3                               
+#define MIRANDA_VERSION_STRING      "0.9.3.3"                              
+#define MIRANDA_VERSION_DISPLAY     "0.9.3"                  
+#define MIRANDA_VERSION_DWORD       MIRANDA_MAKE_VERSION(0, 9, 3, 3)       
                                                                               
 #endif // M_VERSION_H__                                                       
